tests/experimental/error/test_circular_node_decls.lus
node mod_real(x, y: real;)returns( z: real );
(*@contract
        assume abs_real(z) < abs_real(y);
        guarantee abs_real(z) < abs_real(y); *)
let
        z = abs_real (y) + abs_real (x);
tel

node abs_real (x: real) returns(y:real);
let
y = if x >= 0.0 then mod_real(x, x) else -x;
tel
